feat(config): 用占位符配置替换领域配置
- 在 Config 结构中添加 PlaceHolders 字段，用于自定义占位符
- 修改 FormatMessage 函数，以支持新的占位符配置- 更新默认配置文件，用 placeholders 替代 field 配置- 移除 main.go 中的 Field 标志和相关逻辑

--- a/default_config.yaml
+++ b/default_config.yaml
@@ -24,7 +24,9 @@ mcp:
     - ddg-search_search
     - sequential-thinking_sequentialthinking
 proxy: ""
-field: "网络安全研究领域"
+placeholders:
+  field: "网络安全研究领域"
+  total_thoughts: 20
 system_prompt: |
   # 学术研究写作系统提示词
 
