feat: 更新配置和预览功能
- 在 .gitignore 中添加了新的忽略文件
- 更新 README.md，移除不必要的库链接
- 在 SystemPromptConfig.vue 中添加预览按钮和预览弹窗功能，优化用户体验
- 移除 ConfigPanel.vue 中的保存按钮代码，简化布局

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,9 @@ mcpservers.json
 /build/
 mcpagent
 mcpagent-web
+web/test_mcp_config_final.html
+web/test_mcp_config_updated.html
+MCP_TOOLS_API_SUMMARY.md
+prd.md
+start_server.sh
+diagnose_mcp.sh
