feat(agent): 添加流式执行能力并优化 Web 服务器
- 新增 RunStream 函数，支持流式执行 MCP 任务
- 重构 main 函数，使用 runServer 函数封装 Web 服务器逻辑
- 添加 StreamingNotify 接口，支持流式通知
- 优化 LoggerCallback 以支持流式执行
- 更新 Web 服务器初始化和关闭逻辑
- 移除未使用的导入和配置项

--- a/default_config.yaml
+++ b/default_config.yaml
@@ -6,23 +6,31 @@ llm:
 max_step: 20
 mcp:
   mcp_servers:
-    ddg-search:
-      args:
-        - duckduckgo-mcp-server
-      command: uvx
+    # sequential-thinking:
+    #   args:
+    #     - -y
+    #     - "@modelcontextprotocol/server-sequential-thinking"
+    #   command: npx
+    # ddg-search:
+    #   args:
+    #     - duckduckgo-mcp-server
+    #   command: uvx
     fetch:
       args:
         - mcp-server-fetch
       command: uvx
-    sequential-thinking:
-      args:
-        - -y
-        - "@modelcontextprotocol/server-sequential-thinking"
-      command: npx
+
   tools:
-    - fetch_fetch
-    - ddg-search_search
-    - sequential-thinking_sequentialthinking
+    - server: inner
+      name: sequentialthinking
+    - server: inner
+      name: search
+    - server: fetch
+      name: fetch
+    # - server: ddg-search
+    #   name: search
+    # - server: sequential-thinking
+    #   name: sequentialthinking
 proxy: ""
 placeholders:
   field: "网络安全研究领域"
